# rs_smm

./: .gitignore  Cargo.toml  README.md  config.toml
skeleton/: Cargo.toml  README.md
skeleton/src/: ex_bybit.rs  lib.rs  ss.rs
skeleton/src/exchanges/: README.md  ex_binance.rs  ex_bybit.rs  exchange.rs  mod.rs  normalized.rs
skeleton/src/util/: candles.rs  ema.rs  helpers.rs  localorderbook.rs  logger.rs  mod.rs  test.toml
skeleton/tests/: exchange.rs  test.toml  util.rs
src/: lib.rs  main.rs
src/features/: README.md  engine.rs  imbalance.rs  impact.rs  linear_reg.rs  mod.rs
src/parameters/: README.md  parameters.rs
src/strategy/: README.md  market_maker.rs  mod.rs
src/trader/: README.md  quote_gen.rs
tests/: features.rs  params.rs
