workspace = { members = ["skeleton"] }
[package]
name = "rs_smm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
skeleton = { path = "./skeleton" }
rs_bybit = "0.2.3"
linfa-linear = "0.7.0"
linfa = "0.7.0"
ndarray = "0.15.6"
binance = "0.21.0"
