workspace = { members = ["skeleton"] }
[package]
name = "rs_smm"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
skeleton = { path = "./skeleton" }
rs_bybit = "0.3.1"
linfa-linear = "0.7.0"
linfa = "0.7.0"
ndarray = "0.15"
binance = "0.21.0"


[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = 'bench_lin_reg'
harness = false