[package]
name = "skeleton"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = "0.21.0"
num-traits = "0.2.19"
ordered-float = "4.2.0"
rs_bybit = "0.3.0"
serde = "1.0.197"
tokio = "1.36.0"
toml = "0.8.12"